--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -19,7 +19,8 @@
           </ul>
         </div>
       </div>
-      <div class="container-fluid" aling="rigth"> 
+      <div class="container-fluid" aling="rigth">
+        <p>Bienvenido, {{user.username}}</p>
         <a href="/auth/logout" class="btn btn-danger">Cerrar Sesión</a>
       </div>
     </nav>
