Corregido usuario y cursos

--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -20,7 +20,7 @@
         </div>
       </div>
       <div class="container-fluid" aling="rigth">
-        <p>Bienvenido, {{user.username}}</p>
-        <a href="/auth/logout" class="btn btn-danger">Cerrar Sesión</a>
+        <p>Bienvenido, {{user.username}} <a href="/auth/logout" class="btn btn-danger">Cerrar Sesión</a></p>
+
       </div>
     </nav>
