--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -19,8 +19,15 @@
           </ul>
         </div>
       </div>
-      <div class="container-fluid" aling="rigth">
-        <p>Bienvenido, {{user.username}} <a href="/auth/logout" class="btn btn-danger">Cerrar Sesión</a></p>
-
-      </div>
     </nav>
+    <div class="px-3 py-2 border-bottom mb-3">
+   <div class="container d-flex flex-wrap justify-content-center ">
+      <div class="col" align="right" >
+         <div class="text-end">
+       <p>Bienvenido, {{user.username}}
+       <a type="button" class="btn btn-danger text-light me-2" href="/auth/logout">Cerrar Sesión</a>
+       </p>
+     </div>
+      </div>
+   </div>
+    <div class="b-example-divider"></div>
